--- a/studio/templates/studio/settings.html
+++ b/studio/templates/studio/settings.html
@@ -214,7 +214,7 @@
                     <a href="{% url 'my_donations' %}" class="bg-green-600 hover:bg-green-700 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
                         <i class="fas fa-heart mr-2"></i>My Donations
                     </a>
-                    <a href="{% url 'community' %}" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
+                    <a href="{% url 'community_showcase' %}" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
                         <i class="fas fa-users mr-2"></i>Community
                     </a>
                     <a href="/accounts/logout/" class="bg-red-600 hover:bg-red-700 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
@@ -232,7 +232,7 @@
                     <a href="{% url 'contact' %}" class="bg-gray-700 hover:bg-gray-600 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
                         <i class="fas fa-envelope mr-2"></i>Contact Support
                     </a>
-                    <a href="{% url 'community' %}" class="bg-gray-700 hover:bg-gray-600 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
+                    <a href="{% url 'community_showcase' %}" class="bg-gray-700 hover:bg-gray-600 text-white py-2 px-3 rounded-lg transition duration-300 text-center text-sm">
                         <i class="fas fa-book mr-2"></i>Help Center
                     </a>
                 </div>
